logo alignment & hamburger icon fixed

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -34,6 +34,11 @@ nav {
     box-shadow: 0px 1px 15px 0px rgba(0, 0, 0, 0.2);
 }
 
+.brand-logo {
+    min-height: 80px;
+    max-height: 80px;
+}
+
 .logo {
     cursor: pointer;
     height: 80px;
@@ -1637,13 +1642,13 @@ section:last-child {
     height: 3px;
   }
   .hamburger-container .first {
-    transform: translateY(2px);
+    transform: translateY(4px);
   }
   .hamburger-container .second {
     transform: translateY(13px);
   }
   .hamburger-container .third {
-    transform: translateY(24px);
+    transform: translateY(22px);
   }
   .hamburger:checked ~ .first {
     transform: translateY(13px) rotate(45deg);
@@ -1776,13 +1781,13 @@ section:last-child {
     height: 2px;
   }
   .search-filter span:nth-child(2) {
-    transform: translateY(2px);
+    transform: translateY(3px);
   }
   .search-filter span:nth-child(3) {
     transform: translateY(11px);
   }
   .search-filter span:nth-child(4) {
-    transform: translateY(20px);
+    transform: translateY(19px);
   }
   .search-checkbox:checked ~ .search-filter span:nth-child(2) {
     transform: translateY(11px) rotate(45deg);
